2003-08-20  Bruno Haible  <bruno@clisp.org>

	* progname.h: New file, from GNU gettext.
	* progname.c: New file, from GNU gettext.
	* progreloc.c: New file, from GNU gettext.

2003-08-19  Bruno Haible  <bruno@clisp.org>

	* xstrdup.c: Assume <string.h> exists.

2003-08-18  Jim Meyering  <jim@meyering.net>

	* setenv.h: Indent nested cpp directive.
	* vasnprintf.c: Remove trailing blanks.

2003-08-17  Simon Josefsson  <jas@extundo.com>
	    Bruno Haible  <bruno@clisp.org>

	* xstrndup.h: New file.
	* xstrndup.c: New file.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* strndup.h: New file.

2003-08-16  Paul Eggert  <eggert@twinsun.com>

	* regex.h, strdup.c, strtoll.c, strtoul.c: Do not normalize white
	space, undoing this 2003-08-12 change:
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-08/msg00080.html>

2003-08-16  Jim Meyering  <jim@meyering.net>

	Merge from coreutils.
	* xstrtoimax.c: #else #if -> #elif.
	* xstrtoumax.c: Likewise.

2003-08-15  Paul Eggert  <eggert@twinsun.com>

	* config.charset, ref-add.sin, ref-del.sin: Use three spaces,
	rather than tab, after '#' in shell-script copyright notices.
	Suggested by Bruno Haible.

2003-08-15  Jim Meyering  <jim@meyering.net>
	and Paul Eggert  <eggert@twinsun.com>

	Merge from coreutils.
	* readutmp.h (HAVE_UTMPX_H): Undef if struct utmp has the ut_exit
	member but strut utmpx does not.  Needed for AIX 4.3.3.
	(UT_EXIT_E_TERMINATION, UT_EXIT_E_EXIT): Define.

2003-08-15  Jim Meyering  <jim@meyering.net>

	Merge from coreutils.
	* xgethostname.c: Include <stdlib.h>.
	(xghostname): Don't exit for anything other than memory-related
	failure; just return NULL.
	* userspec.c: Include "posixver.h".
	(parse_user_spec): Accept `.' as a separator only
	in pre-POSIX-200112 mode.
	* strtoimax.c: Use #elif rather than #else #if.
	* strftime.c (my_strftime) [!_LIBC && HAVE_TZNAME && HAVE_TZSET]:
	Remove function, now that we can rely on a working tzset function.