@@ -1,3 +1,8 @@
+2003-08-24  Bruno Haible  <bruno@clisp.org>
+
+	* binary-io.h: Include <stdio.h>, to avoid a compilation error when
+	MSVC7 <stdio.h> is included later.
+
 2003-08-20  Bruno Haible  <bruno@clisp.org>
 
 	* progname.h: New file, from GNU gettext.
